--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                             </tr>
                             <tr>
                                 <td colspan="2">пусто</td>
+                                <td>пусто</td>
                             </tr>
         </table>
     </section>
